--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <title>Andy Yu</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="img/andy-snoopy.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/typography.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 
 <body>
@@ -25,28 +27,28 @@
   </header>
 
   <main>
-    <button onclick="window.open('https://rss2025-12.github.io/website', '_blank')">
-      <h3>RSS 2025</h3>
-      <p>MIT Robotics Class</p>
+    <button class="fade-item" onclick="window.open('https://rss2025-12.github.io/website', '_blank')">
+      <h5>RSS 2025</h5>
+      <small>MIT Robotics Class</small>
     </button>
-    <button onclick="location.href='pages/tactile-sensing.html';">
-      <h3>Tactile Sensing</h3>
-      <p>Undergraduate Research</p>
+    <button class="fade-item" onclick="location.href='pages/tactile-sensing.html';">
+      <h5>Tactile Sensing</h5>
+      <small>Undergraduate Research</small>
     </button>
-    <button onclick="window.open('https://maslab-5.github.io', '_blank')">
-      <h3>MASLAB 2023</h3>
-      <p>MIT IAP Robotics Competition</p>
+    <button class="fade-item" onclick="window.open('https://maslab-5.github.io', '_blank')">
+      <h5>MASLAB 2024</h5>
+      <small>MIT IAP Robotics Competition</small>
     </button>
-    <button onclick="location.href='pages/sailing.html';">
-      <h3>Sailing</h3>
-      <p>Optimist, 420, FJ</p>
+    <button class="fade-item" onclick="location.href='pages/sailing.html';">
+      <h5>Sailing</h5>
+      <small>Optimist, 420, FJ</small>
     </button>
-    <button onclick="location.href='pages/arts-and-crafts.html';">
-      <h3>Arts and Crafts</h3>
-      <p>Depression prevention</p>
+    <button class="fade-item" onclick="location.href='pages/arts-and-crafts.html';">
+      <h5>Arts and Crafts</h5>
+      <small>Depression prevention</small>
     </button>
   </main>
 
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
