--- a/pages/arts-and-crafts.html
+++ b/pages/arts-and-crafts.html
@@ -43,7 +43,7 @@
             <div class="image-group">
                 <div class="row">
                     <div class="column">
-                        <img src="../img/secretfinal.png" width="100%">
+                        <img width="50%" src="../img/secretfinal.png">
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             <div class="image-group">
                 <div class="row">
                     <div class="column">
-                        <img src="../img/acrylic.jpeg" width="70%">
+                        <img width="50%" src="../img/acrylic.jpeg">
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
             </div>
         </div>
         <hr>
-        <div class="image-text" style="margin-bottom: 2%;">
+        <div class="image-text">
             <div class="text">
                 <h2>Burgee Keychains</h2>
                 <h4>Inkscape · Fusion360 · Laser cut · 3D Printed</h4>
@@ -99,7 +99,7 @@
             <div class="image-group">
                 <div class="row">
                     <div class="column">
-                        <img src="../img/burgees.jpeg">
+                        <img width="50%" src="../img/burgees.jpeg">
                     </div>
                 </div>
             </div>
