Fix fade effect

--- a/pages/arts-and-crafts.html
+++ b/pages/arts-and-crafts.html
@@ -25,7 +25,8 @@
         </div>
     </header>
 
-    <main class="fade-item">
+    <main>
+        <div class="fade-item">
         <h1>Arts and Crafts</h1>
         <h4>When I'm feeling cozy.</h4>
 
@@ -103,6 +104,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </main>
     <script src="../js/script.js"></script>
