--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -25,7 +25,8 @@
         </div>
     </header>
 
-    <main class="fade-item">
+    <main>
+        <div class="fade-item">
         <h1>Sailing</h1>
         <h3>Started in second grade.</h3>
 
@@ -608,6 +609,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
     </main>
     <script src="../js/script.js"></script>
 </body>
