--- a/pages/tactile-sensing.html
+++ b/pages/tactile-sensing.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../css/typography.css" />
     <link rel="stylesheet" href="../css/pages.css" />
 </head>
-
 <body>
     <header>
         <a href="../index.html" class="header-title">Andy Yu</a>
@@ -26,7 +25,8 @@
         </div>
     </header>
 
-    <main class="fade-item">
+    <main>
+        <div class="fade-item">
         <h1>Tactile Sensing</h1>
         <h3>Distributed Robotics Laboratory in MIT CSAIL</h3>
         <h4>Supervisor: Annan Zhang</h4>
@@ -37,6 +37,7 @@
             Annan Zhang, Miguel Flores-Acton, <strong>Andy Yu</strong>, Anshul Gupta, Maggie Yao, Daniela Rus.
             Accepted at <i>2025 International Symposium on Experimental Robotics (ISER).</i>
         </p>
+        </div>
     </main>
     <script src="../js/script.js"></script>
 </body>
