Add Fall 2025 sailing season

--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -93,6 +93,13 @@
             <!-- Table body -->
             <tbody>
                 <tr>
+                    <td>Hood Invite</td>
+                    <td>Boston University</td>
+                    <td>Oct 26, 2024</td>
+                    <td>Skipper</td>
+                    <td>2/18 (A)</td>
+                </tr>
+                <tr>
                     <td>Terrier Invite</td>
                     <td>Boston University</td>
                     <td>Oct 26, 2024</td>
