--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -93,11 +93,32 @@
             <!-- Table body -->
             <tbody>
                 <tr>
-                    <td>Hood Invite</td>
-                    <td>Boston University</td>
-                    <td>Oct 26, 2024</td>
+                    <td>Professor Erwin Schell Trophy</td>
+                    <td>MIT</td>
+                    <td>Oct 25-26, 2025</td>
                     <td>Skipper</td>
-                    <td>2/18 (A)</td>
+                    <td>10/18 (B)</td>
+                </tr>
+                <tr>
+                    <td>Oberg Trophy</td>
+                    <td>Northeastern</td>
+                    <td>Oct 18-19, 2025</td>
+                    <td>Skipper</td>
+                    <td>7/18 (A)</td>
+                </tr>
+                <tr>
+                    <td>The George Warren Smith Trophy</td>
+                    <td>MIT</td>
+                    <td>Sep 27, 2025</td>
+                    <td>Skipper</td>
+                    <td>5/18 (A)</td>
+                </tr>
+                <tr>
+                    <td>The Hood Trophy</td>
+                    <td>Tufts</td>
+                    <td>Sep 20-21, 2025</td>
+                    <td>Skipper</td>
+                    <td>5/18 (B)</td>
                 </tr>
                 <tr>
                     <td>Terrier Invite</td>
@@ -107,7 +128,7 @@
                     <td>2/18 (A)</td>
                 </tr>
                 <tr>
-                    <td>The George Warren Smith Trophy 24</td>
+                    <td>The George Warren Smith Trophy</td>
                     <td>MIT</td>
                     <td>Sep 28, 2024</td>
                     <td>Skipper</td>
@@ -170,7 +191,7 @@
                     <td>1/13 (A)</td>
                 </tr>
                 <tr>
-                    <td>Hood Trophy</td>
+                    <td>The Hood Trophy</td>
                     <td>Tufts</td>
                     <td>Sep 23-24, 2023</td>
                     <td>Skipper</td>
