Add page folders

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
   </header>
 
   <main>
+    <button class="fade-item" onclick="location.href='pages/fpga1';">
+      <h5>Digital Systems Lab I 2025</h5>
+      <small>MIT FPGA Class</small>
+    </button>
     <button class="fade-item" onclick="window.open('https://rss2025-12.github.io/website', '_blank')">
       <h5>RSS 2025</h5>
       <small>MIT Robotics Class</small>
     </button>
-    <button class="fade-item" onclick="location.href='pages/tactile-sensing.html';">
+    <button class="fade-item" onclick="location.href='pages/tactile-sensing';">
       <h5>Tactile Sensing</h5>
       <small>Undergraduate Research</small>
     </button>
@@ -39,11 +43,11 @@
       <h5>MASLAB 2024</h5>
       <small>MIT IAP Robotics Competition</small>
     </button>
-    <button class="fade-item" onclick="location.href='pages/sailing.html';">
+    <button class="fade-item" onclick="location.href='pages/sailing';">
       <h5>Sailing</h5>
       <small>Optimist, 420, FJ</small>
     </button>
-    <button class="fade-item" onclick="location.href='pages/arts-and-crafts.html';">
+    <button class="fade-item" onclick="location.href='pages/arts-and-crafts';">
       <h5>Arts and Crafts</h5>
       <small>Depression prevention</small>
     </button>
