--- a/pages/arts-and-crafts/index.html
+++ b/pages/arts-and-crafts/index.html
@@ -3,15 +3,15 @@
 <head>
     <title>Arts and Crafts</title>
     <meta charset="UTF-8" />
-    <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
+    <link rel="icon" href="../../img/andy-snoopy.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/typography.css" />
-    <link rel="stylesheet" href="../css/pages.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/typography.css" />
+    <link rel="stylesheet" href="../../css/pages.css" />
 </head>
 <body>
     <header>
-        <a href="../index.html" class="header-title">Andy Yu</a>
+        <a href="../../index.html" class="header-title">Andy Yu</a>
         <div class="header-buttons">
             <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
                 <i class="fa-brands fa-github" ></i>
