--- a/pages/fpga1/index.html
+++ b/pages/fpga1/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tactile Sensing</title>
+    <title>FPGA</title>
     <meta charset="UTF-8" />
-    <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
+    <link rel="icon" href="../../img/andy-snoopy.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/typography.css" />
-    <link rel="stylesheet" href="../css/pages.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/typography.css" />
+    <link rel="stylesheet" href="../../css/pages.css" />
 </head>
 <body>
     <header>
-        <a href="../index.html" class="header-title">Andy Yu</a>
+        <a href="../../index.html" class="header-title">Andy Yu</a>
         <div class="header-buttons">
             <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
                 <i class="fa-brands fa-github" ></i>
@@ -26,18 +26,7 @@
     </header>
 
     <main>
-        <div class="fade-item">
-        <h1>Tactile Sensing</h1>
-        <h3>Distributed Robotics Laboratory in MIT CSAIL</h3>
-        <h4>Supervisor: Annan Zhang</h4>
-        <h4>PI: Daniela Rus</h4>
-        <hr>
-        <p>
-            Fluidically Innervated Lattices Make Versatile and Durable Tactile Sensors.
-            Annan Zhang, Miguel Flores-Acton, <strong>Andy Yu</strong>, Anshul Gupta, Maggie Yao, Daniela Rus.
-            Accepted at <i>2025 International Symposium on Experimental Robotics (ISER).</i>
-        </p>
-        </div>
+
     </main>
     <script src="../js/script.js"></script>
 </body>
