Clean up pathing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <main>
     <button class="fade-item" onclick="location.href='pages/fpga1';">
-      <h5>Digital Systems Lab I 2025</h5>
+      <h5>Digital Systems Lab I</h5>
       <small>MIT FPGA Class</small>
     </button>
     <button class="fade-item" onclick="window.open('https://rss2025-12.github.io/website', '_blank')">
