--- a/pages/arts-and-crafts/index.html
+++ b/pages/arts-and-crafts/index.html
@@ -44,7 +44,7 @@
             <div class="image-group">
                 <div class="row">
                     <div class="column">
-                        <img width="50%" src="../img/secretfinal.png">
+                        <img width="50%" src="../../img/secretfinal.png">
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
             <div class="image-group">
                 <div class="row">
                     <div class="column">
-                        <img width="50%" src="../img/acrylic.jpeg">
+                        <img width="50%" src="../../img/acrylic.jpeg">
                     </div>
                 </div>
             </div>
@@ -79,10 +79,10 @@
             <div class="image-group">
                 <div class="row">
                     <div class="column">
-                        <img src="../img/frameback.jpeg">
+                        <img src="../../img/frameback.jpeg">
                     </div>
                     <div class="column">
-                        <img src="../img/framefront.jpeg">
+                        <img src="../../img/framefront.jpeg">
                     </div>
                 </div>
             </div>
@@ -107,6 +107,6 @@
         </div>
         </div>
     </main>
-    <script src="../js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </body>
 </html>
