--- a/pages/sailing/index.html
+++ b/pages/sailing/index.html
@@ -35,10 +35,10 @@
         <div class="image-group">
             <div class="row">
                 <div class="column">
-                    <img src="../img/roll-tack.jpg" alt="Andy roll tacking">
+                    <img src="../../img/roll-tack.jpg" alt="Andy roll tacking">
                 </div>
                 <div class="column">
-                    <img src="../img/rounding.jpg" alt="Andy rounding a mark">
+                    <img src="../../img/rounding.jpg" alt="Andy rounding a mark">
                 </div>
             </div>
         </div>
@@ -639,6 +639,6 @@
         </table>
         </div>
     </main>
-    <script src="../js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </body>
 </html>
