--- a/pages/tactile-sensing/index.html
+++ b/pages/tactile-sensing/index.html
@@ -39,6 +39,6 @@
         </p>
         </div>
     </main>
-    <script src="../js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </body>
 </html>
