--- a/pages/fpga1/index.html
+++ b/pages/fpga1/index.html
@@ -28,6 +28,6 @@
     <main>
 
     </main>
-    <script src="../js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </body>
 </html>
