--- a/pages/arts-and-crafts/index.html
+++ b/pages/arts-and-crafts/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="../../index.html" class="header-title">Andy Yu</a>
+        <a href="../../" class="header-title">Andy Yu</a>
         <div class="header-buttons">
             <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
                 <i class="fa-brands fa-github" ></i>
@@ -100,7 +100,7 @@
             <div class="image-group">
                 <div class="row">
                     <div class="column">
-                        <img width="50%" src="../img/burgees.jpeg">
+                        <img width="50%" src="../../img/burgees.jpeg">
                     </div>
                 </div>
             </div>
