--- a/pages/fpga1/index.html
+++ b/pages/fpga1/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="../../index.html" class="header-title">Andy Yu</a>
+        <a href="../../" class="header-title">Andy Yu</a>
         <div class="header-buttons">
             <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
                 <i class="fa-brands fa-github" ></i>
@@ -26,7 +26,13 @@
     </header>
 
     <main>
+        <a href="https://drive.google.com/file/d/1xRFl7W8gA5rURCB1NvAWfOPneEpLRbRa/view?usp=drive_link" target="_blank" style="margin-bottom: 4vh;">
+            Final Video
+        </a>
 
+        <iframe
+            src="../../img/FPoGA_Final_Report.pdf">
+        </iframe>
     </main>
     <script src="../../js/script.js"></script>
 </body>
