--- a/pages/tactile-sensing/index.html
+++ b/pages/tactile-sensing/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="../../index.html" class="header-title">Andy Yu</a>
+        <a href="../../" class="header-title">Andy Yu</a>
         <div class="header-buttons">
             <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
                 <i class="fa-brands fa-github" ></i>
